--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,17 @@
 {
+    "extends": "@tsconfig/node22/tsconfig.json",
     "compilerOptions": {
         "module": "NodeNext",
-        "target": "ES2020",
         "moduleResolution": "NodeNext",
-        "esModuleInterop": true,
         "outDir": "./dist",
         "rootDir": "./src",
-        "strict": true,
-        "skipLibCheck": true
+        "resolveJsonModule": true,
+        "sourceMap": true
     },
     "include": [
         "src/**/*.ts"
-    ]
+    ],
+    "ts-node": {
+        "esm": true
+    }
 }
