--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "express-fileupload": "^1.5.1",
     "form-data": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^3.3.2",
     "uuid": "^11.1.0"
   }
 }
