--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - /workspace/node_modules
     depends_on:
       - db
+    env_file: .env
     environment:
       PGUSER: postgres
       PGPASSWORD: postgres
