--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@tsconfig/node22": "^22.0.1",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.1",
+    "@types/express": "^4.17.20",
     "@types/express-fileupload": "^1.5.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.12",
@@ -49,6 +49,7 @@
     "form-data": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "livekit-server-sdk": "^1.2.7"
   }
 }
